<resources>
    <string name="app_name">Crime Apps</string>
    <string name="title_activity_maps">Map</string>
    <string name="crime">Crime tile</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="get_location">Get Location</string>
    <string name="save">Save</string>
    <string name="error_field_text">This field shouldn\'t be empty</string>
</resources>
