<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/crime_iv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:src="@drawable/burglary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/crime_iv"
        android:orientation="vertical">

        <TextView
            android:id="@+id/crime_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/crime"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/crime_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lines="2"
            android:maxLines="2"
            android:text="@string/description"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/crime_location_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="3dp"
            android:lines="2"
            android:maxLines="2"
            android:text="@string/location"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>